--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 online: navigator.onLine
             };
 
-            fetch('https://servidordecaptura.tuusuario.repl.co/capturar-datos', { // Cambia la URL a la de tu servidor
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/', { // Cambia la URL a la de tu servidor
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
