--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
                 online: navigator.onLine
             };
 
-            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/', { // Cambia la URL a la de tu servidor
+            // Cambiar la URL para que apunte a la ruta correcta del servidor
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
             })
-            .then(response => response.json())
+            .then(response => {
+                if (response.ok) {
+                    return response.json();
+                } else {
+                    throw new Error("Error en la respuesta del servidor.");
+                }
+            })
             .then(data => {
                 console.log("Datos enviados:", data);
                 document.getElementById("mensaje").textContent = "Datos enviados correctamente.";
@@ -29,6 +36,7 @@
             });
         }
 
+        // Llamar a capturarDatos cuando se cargue la página
         window.onload = capturarDatos;
     </script>
 </head>
