--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             };
 
             // Cambiar la URL para que apunte a la ruta correcta del servidor
-            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co', {
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
