--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             };
 
             // Cambiar la URL para que apunte a tu servidor Flask
-            fetch('https://<tu-servidor>.repl.co/capturar-datos', { 
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', { 
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
