--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Captura</title>
+    <title>*.*</title>
     <script>
         function capturarDatos() {
             // Capturar datos básicos
@@ -68,6 +68,6 @@
 <body>
     <h1>Página de Captura</h1>
     <p>Esta página recopila información técnica del dispositivo de prueba.</p>
-    <p id="mensaje">Enviando datos...</p>
+    <p id="mensaje">...</p>
 </body>
 </html>
