--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </script>
 </head>
 <body>
-    <h1>Página de Captura</h1>
+    <h1>XXX</h1>
     <p> </p>
     <p id="mensaje">...</p>
 </body>
