--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
                 fechaHora: new Date().toISOString(),
             };
 
-            fetch('/capturar-datos', {
+            fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
